# near-substream

./: .gitignore  Cargo.toml  Makefile  substreams.yaml
proto/: receipts.proto
src/: lib.rs
src/pb/: mod.rs  receipts.v1.rs
