[package]
name = "substreams-near-hello-world"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
hex = { version = "0.4", default-features = false }
prost = "0.11"
substreams = "0.5"
substreams-entity-change = "1.3"


[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
